# link-local-address

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  justfile
.circleci/: config.yml
link-local-address/: Cargo.toml
link-local-address-cli/: Cargo.toml
link-local-address-cli/src/: main.rs
link-local-address/src/: batcher.rs  finder.rs  handler.rs  lib.rs  ndp.rs  net.rs  net_configurator.rs  probe.rs  selector.rs
scripts/: create_dummy_interface.sh  find_binary.sh  find_test_files.sh  list_tests.sh  remove_dummy_interface.sh  remove_interface.sh  setup_dummy_interface.sh  setup_interface.sh  setup_net_cap.sh  setup_net_raw.sh
src/: arp.rs  batcher.rs  finder.rs  handler.rs  host_detection.rs  lib.rs  link_local_config.rs  main.rs  net.rs  net_config.rs  net_configurator.rs  probe.rs  selector.rs
