[package]
name = "link-local-address-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
link-local-address = {version = "0.1.0", path = "../link-local-address"}
tokio = {version = "1.43.0", features = ["rt", "macros"]}
log = "0.4.25"
pnet = "0.35.0"
simple_logger = "5.0.0"
clap = { version = "4.5.30", features = ["derive"] }
