[package]
name = "link-local-address-cli"
version = "0.1.1"
edition = "2021"

authors =["Adrian Skulimowski"]
description = "A CLI tool that automates link-local IP assignment by scanning network interfaces and selecting a free address."
license = "MIT/Apache-2.0"
keywords = ["network", "cli", "async", "link-local", "ip"]
categories = ["network-programming", "command-line-utilities", "config"]
repository = "https://github.com/skullim/link-local-address"

[dependencies]
link-local-address = {version = "0.1.0", path = "../link-local-address"}
tokio = {version = "1.43.0", features = ["rt", "macros"]}
log = "0.4.25"
simple_logger = "5.0.0"
clap = { version = "4.5.30", features = ["derive"] }
