[package]
name = "link-local-address"
version = "0.2.0"
edition = "2021"

authors =["Adrian Skulimowski"]
description = "A library for discovering and configuring link-local addresses with automatic IP conflict detection."
license = "MIT/Apache-2.0"
keywords = ["link-local", "network", "async", "ip", "configuration"]
categories = ["network-programming", "config"]
repository = "https://github.com/skullim/link-local-address"

[dependencies]
async-arp = "0.4.0"
async-trait = "0.1.86"
futures = "0.3.31"
ipnet = "2.11.0"
mac_address = "1.1.8"
netconfig = "0.4.0"
pnet = {version = "0.35.0"}
typed-builder = "0.20.0"
